--- a/package.json
+++ b/package.json
@@ -11,30 +11,33 @@
   "dependencies": {
     "ad": "^0.3.2",
     "async": "^1.5.2",
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.19.0",
+    "cnpm": "^6.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
-    "express": "~4.15.2",
+    "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-mysql-session": "^1.2.3",
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
-    "handlebars": "^4.0.12",
+    "handlebars": "^4.7.6",
     "ioredis": "^4.2.0",
+    "joi": "^14.0.4",
     "knuth-shuffle": "^1.0.8",
     "ldapjs-client": "^0.1.0",
     "log4js": "^0.6.36",
-    "morgan": "~1.6.1",
+    "morgan": "^1.10.0",
     "mysql2": "^1.6.2",
     "node-cmd": "^3.0.0",
     "nodemailer": "^4.6.8",
     "path": "^0.12.7",
+    "phantom": "^6.3.0",
     "pm2": "^3.1.3",
     "process": "^0.11.9",
     "q": "^1.5.1",
     "qcloudsms_js": "^0.1.1",
     "request": "^2.72.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "^2.5.0"
   }
 }
